@@ -1,9 +1,12 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
-1.000002
+1.001000
  [Added / test requires]
  - Dist::Zilla::Util::Test::KENTNL 1.003001
  - Test::DZil
+
+ [Removed / runtime requires]
+ - Dist::Zilla::Util::EmulatePhase
 
 1.000001 2014-08-15T21:15:05Z
 
