@@ -1,6 +1,6 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
-1.000002
+1.001000
 
 1.000001 2014-08-15T21:15:05Z
 
