@@ -4,11 +4,16 @@ Release history for Dist-Zilla-Plugin-Author-KENTNL-Prereqs-Latest-Selective
  [00 Minor]
  - metadata
  - tests
+ - internals
 
  [Dependencies::Stats]
  - Dependencies changed since 1.000001, see misc/*.deps* for details
  - develop: +1 ↑1 (suggests: ↑2)
+ - runtime: -1
  - test: +2
+
+ [Internals]
+ - DZPU:EmulatePhase no longer used.
 
  [Metadata]
  - fix author to kentnl
